added auto package discovery against assets

--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,12 @@
     "psr-4": {
       "Drivezy\\LaravelAccessManager\\": "src/"
     }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Drivezy\\LaravelAccessManager\\LaravelAccessManagerServiceProvider"
+      ]
+    }
   }
 }
