--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "drivezy/laravel-utility": "^0.9.0"
+  },
+  "require-dev": {
+    "drivezy/laravel-utility": "^0.9.5"
   },
   "autoload": {
     "psr-4": {
