--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "minimum-stability": "stable",
-  "require": {
+  "require-dev": {
     "drivezy/laravel-utility": "^0.9.5"
   },
   "autoload": {
