--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,8 @@
         "Drivezy\\LaravelAccessManager\\LaravelAccessManagerServiceProvider"
       ]
     }
+  },
+  "require": {
+    "drivezy/laravel-utility": "1.*"
   }
 }
