--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     "require": {
         "doctrine/dbal": "^2.9",
         "drivezy/laravel-record-manager": "^1.0",
-        "drivezy/laravel-utility": "^1.0",
-        "laravel/socialite": "^4.3"
+        "drivezy/laravel-utility": "^1.0"
     },
     "autoload": {
         "psr-4": {
@@ -27,5 +26,8 @@
                 "Drivezy\\LaravelAccessManager\\LaravelAccessManagerServiceProvider"
             ]
         }
+    },
+    "require": {
+        "drivezy/laravel-utility": "1.*"
     }
 }
